went in a different direction

--- a/RESTful-CRUD/_oldIdea/src/index.jade
+++ b/RESTful-CRUD/_oldIdea/src/index.jade
@@ -6,7 +6,7 @@ html
     .container
         .row
             .col-12
-                h3 Points of Interest
+                h3 Tails of Interest
         .row.userinfo
             .col-12
                 .form-group
